@@ -25,6 +25,7 @@ Version 10
 
 --Fixed bug in token pass-up when grabbing tokens right before rising.
 
+--Fixed so that health bar for self in higher level on knock-down doesn't instantally appear to refill itself.
 
 
 
